--- a/Register.html
+++ b/Register.html
@@ -110,7 +110,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
 
 
-    <script type="module" src='main.js'></script>
+    <script type="module" src='register.js'></script>
 
 
 </body>
