--- a/Register.html
+++ b/Register.html
@@ -36,7 +36,7 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
                         <h2 class="fw-bold mb-5">Sign up now</h2>
-                        <form onsubmit="signup(event)">
+                        <form>
                             <!-- 2 column grid layout with text inputs for the first and last names -->
                             <div class="row">
                                 <div class="col-md-6 mb-4">
@@ -82,7 +82,7 @@
                             <!-- Register buttons -->
                             <div class="text-center">
                                 <p>or sign up with:</p>
-                                <button type="button" class="btn btn-link btn-floating mx-1">
+                                <button type="submit" onsubmit="facebooklogin()" class="btn btn-link btn-floating mx-1">
                                     <i class="fab fa-facebook-f"></i>
                                 </button>
 
@@ -111,7 +111,6 @@
 
 
     <script type="module" src='register.js'></script>
-
 
 </body>
 
