--- a/Register.html
+++ b/Register.html
@@ -82,7 +82,7 @@
                             <!-- Register buttons -->
                             <div class="text-center">
                                 <p>or sign up with:</p>
-                                <button type="submit" onsubmit="facebooklogin()" class="btn btn-link btn-floating mx-1">
+                                <button type="submit" id="fb" class="btn btn-link btn-floating mx-1">
                                     <i class="fab fa-facebook-f"></i>
                                 </button>
 
@@ -111,6 +111,7 @@
 
 
     <script type="module" src='register.js'></script>
+    <script type="module" src='facebook.js'></script>
 
 </body>
 
